--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
 
   # Firebase Libs
   #firebase_core: ^1.10.0
-  #firebase_auth: ^3.2.0
+  firebase_auth: ^3.3.17
   cloud_firestore: ^3.1.13
   firebase_core: ^1.15.0
 
@@ -76,7 +76,7 @@ dependencies:
   geocoding: ^2.0.4
 
 
-  # Snaks
+  # Snacks
   top_snackbar_flutter: ^1.0.2
 
   # Animations
@@ -86,6 +86,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   wave: ^0.2.0
   lottie: ^1.3.0
+  badges: ^2.0.2
+
 
 dev_dependencies:
   flutter_test:
