--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,11 @@ dependencies:
   geoflutterfire: ^3.0.3
   geocoding: ^2.0.4
 
+  # Shimmer
+  shimmer: ^2.0.0
+
+   # Image Network
+  cached_network_image: ^3.2.0
 
   # Snacks
   top_snackbar_flutter: ^1.0.2
@@ -87,6 +92,7 @@ dependencies:
   wave: ^0.2.0
   lottie: ^1.3.0
   badges: ^2.0.2
+  flutter_staggered_animations: ^1.0.0
 
 
 dev_dependencies:
