--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,8 +81,12 @@ dependencies:
    # Image Network
   cached_network_image: ^3.2.0
 
+
+  # Fonts
+
   # Snacks
   top_snackbar_flutter: ^1.0.2
+  flutter_staggered_animations: ^1.0.0
 
   # Animations
   simple_animations: ^4.0.1
@@ -92,8 +96,7 @@ dependencies:
   wave: ^0.2.0
   lottie: ^1.3.0
   badges: ^2.0.2
-  flutter_staggered_animations: ^1.0.0
-
+  flutter_custom_clippers: ^2.0.0
 
 dev_dependencies:
   flutter_test:
