--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   cloud_firestore: ^3.1.13
   firebase_core: ^1.15.0
 
-
+  # Payment
   flutter_credit_card: ^3.0.1
-
+  stripe_payment: ^1.1.4
   #firebase_messaging: ^11.1.0
   
   # Streams and State Managment 
