--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
   # Firebase Libs
   #firebase_core: ^1.10.0
   firebase_auth: ^3.3.17
@@ -48,6 +47,7 @@ dependencies:
   
   # Streams and State Managment 
   flutter_bloc: ^8.0.1
+  rxdart: ^0.27.3
 
   # Pair and Other Types
   #analyzer_plugin: ^0.3.0
