--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -187,9 +187,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/Delivery-Cristina.jpg
+    - assets/page2.jpg
+    - assets/choices.jpg
     - assets/new_oval_logo.png
     - assets/icons/
     - assets/icons/in_store.svg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
