--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -190,6 +190,7 @@ flutter:
     - assets/Delivery-Cristina.jpg
     - assets/page2.jpg
     - assets/choices.jpg
+    - assets/order_icon.png
     - assets/new_oval_logo.png
     - assets/icons/
     - assets/icons/in_store.svg
