--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -149,7 +149,8 @@ dependencies:
   lottie: ^1.3.0
   badges: ^2.0.2
   flutter_custom_clippers: ^2.0.0
-
+  flutter_spinkit: ^5.1.0
+  flutter_easyloading: ^3.0.5
   hexcolor: ^2.0.7
 
   # TIME LINES
@@ -159,6 +160,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_name: "^0.0.1"
+
+flutter_launcher_name:
+  name: "MyKom"
 
   flutter_launcher_icons: ^0.9.1
 
