--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -61,9 +61,11 @@ dependencies:
 
   # Payment
   flutter_credit_card: ^3.0.1
-  stripe_payment: ^1.1.4
+#  stripe_payment: ^1.1.4
+#  webview_flutter: ^3.0.4
+#  flutter_braintree: ^2.3.1
   #firebase_messaging: ^11.1.0
-  
+
   # Streams and State Managment 
   flutter_bloc: ^8.0.1
   rxdart: ^0.26.0
@@ -72,9 +74,11 @@ dependencies:
   #analyzer_plugin: ^0.3.0
   timeago: ^3.2.2
 
-
   # Network Agent
   dio: ^4.0.6
+  http: ^0.13.4
+  http_auth:
+
 
   # Connectivity Plus (check internet)
   #connectivity_plus: ^2.0.2
@@ -104,7 +108,7 @@ dependencies:
   country_code_picker: ^2.0.2
 
   # Maps
-  google_maps_flutter: ^2.1.4
+  google_maps_flutter: ^2.0.2
   geolocator: ^8.2.0
   search_map_location: ^0.0.5
   flutter_google_places: ^0.3.0
@@ -114,7 +118,7 @@ dependencies:
   # Shimmer
   shimmer: ^2.0.0
 
-
+  rename: ^2.0.1
 
   # Dart Pucakges
   equatable: ^2.0.3
