--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_kom"
+    package="com.districtapp.mykomapp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -38,6 +38,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
+
+
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
@@ -49,5 +51,22 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD2mHkT8_abpMD9LJl307Qhk7GHWuKqMJw"/>
+
+        <service android:name="com.example.app.backgroundService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.app.START_BACKGROUND" />
+            </intent-filter>
+        </service>
+
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+            </intent-filter>
+        </receiver>
+
     </application>
+
 </manifest>
