--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.my_kom"
+        applicationId "com.districtapp.mykomapp"
         minSdkVersion 21//flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -71,7 +71,6 @@ android {
             signingConfig signingConfigs.release
         }
     }
-
 }
 
 flutter {
@@ -83,5 +82,9 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+//    implementation('com.google.firebase:firebase-auth') {
+//        exclude module: "play-services-safetynet"
+//    }
 
 }
