--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+2
+version: 1.0.3+7
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -42,7 +42,7 @@ dependencies:
   firebase_storage: ^10.2.17
   firebase_messaging: ^11.4.1
   flutter_local_notifications: ^7.0.0
-
+  overlay_support: ^2.0.1
   # Path
   path: ^1.8.0
 
@@ -53,8 +53,8 @@ dependencies:
 
   # Image Network
   image_picker: ^0.8.5+3
-  flutter_image_compress: ^1.1.0
-  image_cropper: ^1.4.1
+  # flutter_image_compress: ^1.1.0
+  # image_cropper: ^1.4.1
   cached_network_image: ^3.2.0
 
 
@@ -98,7 +98,7 @@ dependencies:
   google_fonts: ^2.3.1
 
   # Navigation Bar
-  curved_navigation_bar: ^1.0.3
+  # curved_navigation_bar: ^1.0.3
 
   # Sliding 
   sliding_up_panel: ^2.0.0+1
@@ -139,21 +139,21 @@ dependencies:
 
   flutter_svg: ^1.0.3
   url_launcher: ^6.1.2
-  font_awesome_flutter: ^10.1.0
+  # font_awesome_flutter: ^10.1.0
 
   fluttertoast: ^8.0.9
 
-  step_progress_indicator: ^1.0.2
+  # step_progress_indicator: ^1.0.2
   # Animations
   simple_animations: ^4.0.1
-  animated_text_kit: ^4.2.1
-  animated_splash_screen: ^1.2.0
+  # animated_text_kit: ^4.2.1
+  # animated_splash_screen: ^1.2.0
   smooth_page_indicator: ^1.0.0+2
-  wave: ^0.2.0
-  lottie: ^1.3.0
+  # wave: ^0.2.0
+  # lottie: ^1.3.0
   badges: ^2.0.2
-  flutter_custom_clippers: ^2.0.0
-  flutter_spinkit: ^5.1.0
+  # flutter_custom_clippers: ^2.0.0
+  # flutter_spinkit: ^5.1.0
   flutter_easyloading: ^3.0.5
   hexcolor: ^2.0.7
 
