--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.3+8
+version: 1.0.3+11
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -52,7 +52,7 @@ dependencies:
 
 
   # Image Network
-  image_picker: ^0.8.5+3
+  # image_picker: ^0.8.5+3
   # flutter_image_compress: ^1.1.0
   # image_cropper: ^1.4.1
   cached_network_image: ^3.2.0
@@ -154,28 +154,37 @@ dependencies:
   badges: ^2.0.2
   # flutter_custom_clippers: ^2.0.0
   # flutter_spinkit: ^5.1.0
+
+  # Loading Widget
   flutter_easyloading: ^3.0.5
+  load: ^1.0.0
+
   hexcolor: ^2.0.7
 
   # TIME LINES
   timelines: ^0.1.0
 
+  # Splash Screen
+  flutter_native_splash: ^2.2.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_name: "^0.0.1"
+#  flutter_launcher_name: any
 
-flutter_launcher_name:
-  name: "MyKom"
+#flutter_launcher_name:
+#  name: "MyKom"
 
-  flutter_launcher_icons: ^0.9.1
+  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/app_icon.png"
+
+flutter_native_splash:
+  color: "#469e7c"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
