--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
 
   # Payment
   flutter_credit_card: ^3.0.1
+  flutter_stripe: ^4.0.0
 #  stripe_payment: ^1.1.4
 #  webview_flutter: ^3.0.4
 #  flutter_braintree: ^2.3.1
@@ -80,8 +81,16 @@ dependencies:
   http_auth:
 
 
+  # Bottom Nav Bar
+#  persistent_bottom_nav_bar: ^4.0.2
+#  animated_bottom_navigation_bar: ^1.1.0
+  convex_bottom_bar: ^3.0.0
   # Connectivity Plus (check internet)
   #connectivity_plus: ^2.0.2
+
+
+  # Switch
+  flutter_switch: ^0.3.2
 
   # Local Storage
   shared_preferences: ^2.0.6
@@ -202,7 +211,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto/Roboto-Medium.ttf
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
@@ -213,7 +225,9 @@ flutter:
     - assets/new_oval_logo.png
     - assets/icons/
     - assets/icons/in_store.svg
-
+    - assets/delevery_address_mark.jpg
+    - assets/icons/address_delivery_icon.png
+    - assets/water_section_icon.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -227,12 +241,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
